--- a/.gitignore
+++ b/.gitignore
@@ -235,3 +235,8 @@ _Pvt_Extensions
 .fake/
 *.xml
 DevBaykusWeb/.vs/DevBaykusWeb/xs/UserPrefs.xml
+DevBaykusWeb/DevBaykusWeb/obj/DevBaykusWeb.csproj.nuget.dgspec.json
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
+DevBaykusWeb/DevBaykusWeb/obj/DevBaykusWeb.csproj.nuget.g.props
+DevBaykusWeb/DevBaykusWeb/obj/project.assets.json
+DevBaykusWeb/DevBaykusWeb/obj/project.nuget.cache
