--- a/.gitignore
+++ b/.gitignore
@@ -483,3 +483,4 @@ DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
 DevBaykusWeb/DevBaykusWeb/obj/DevBaykusWeb.csproj.nuget.g.props
 DevBaykusWeb/DevBaykusWeb/obj/project.assets.json
 DevBaykusWeb/DevBaykusWeb/obj/project.nuget.cache
+*.cache
