--- a/.gitignore
+++ b/.gitignore
@@ -484,3 +484,4 @@ DevBaykusWeb/DevBaykusWeb/obj/DevBaykusWeb.csproj.nuget.g.props
 DevBaykusWeb/DevBaykusWeb/obj/project.assets.json
 DevBaykusWeb/DevBaykusWeb/obj/project.nuget.cache
 *.cache
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
