--- a/.gitignore
+++ b/.gitignore
@@ -496,3 +496,8 @@ DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
 *.json
 *.cache
 *.xml
+DevBaykusWeb/DevBaykusWeb/obj/DevBaykusWeb.csproj.nuget.dgspec.json
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.GeneratedMSBuildEditorConfig.editorconfig
+DevBaykusWeb/DevBaykusWeb/obj/project.assets.json
+DevBaykusWeb/DevBaykusWeb/obj/project.nuget.cache
