--- a/.gitignore
+++ b/.gitignore
@@ -501,3 +501,11 @@ DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
 DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.GeneratedMSBuildEditorConfig.editorconfig
 DevBaykusWeb/DevBaykusWeb/obj/project.assets.json
 DevBaykusWeb/DevBaykusWeb/obj/project.nuget.cache
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.assets.cache
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.csproj.AssemblyReference.cache
+DevBaykusWeb/DevBaykusWeb/obj/Debug/net7.0/DevBaykusWeb.GeneratedMSBuildEditorConfig.editorconfig
+DevBaykusWeb/DevBaykusWeb/obj/DevBaykusWeb.csproj.nuget.dgspec.json
+DevBaykusWeb/DevBaykusWeb/obj/DevBaykusWeb.csproj.nuget.g.props
+DevBaykusWeb/DevBaykusWeb/obj/project.assets.json
+DevBaykusWeb/DevBaykusWeb/obj/project.nuget.cache
